# gcrypt

./: .gitignore  ACKNOWLEDGMENTS.md  API_STABILITY.md  BENCHMARKS.md  CHANGELOG.md  COMPLIANCE_CHECKLIST.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  GCC_WISHLIST.md  GHOSTCHAIN.md  LEGAL.md  LICENSE  LICENSE-APACHE  NOTICE  PRODUCTION_READY.md  README.md  SECURITY_ASSESSMENT.md  TODO.md
benches/: ed25519.rs  field_arithmetic.rs  performance.rs  point_operations.rs  x25519.rs
docs/: README.md  api-reference.md  api.md  benchmarks.md  c-integration.md  features.md  getting-started.md  migration.md  rust-integration.md  zig-integration.md
examples/: aes_gcm_example.rs  basic_operations.rs  batch_operations.rs  ghostchain_demo.rs  ghostchain_integration.rs  gquic_transport.rs  guardian_auth.rs  test_basepoint.rs  zk_hash_functions.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: point_operations.rs  scalar_arithmetic.rs
gcc-docs/: etherlink-integration.md
security/: SECURITY.md
src/: aead.rs  bls12_381.rs  constants.rs  edwards.rs  field.rs  hash.rs  hsm.rs  kdf.rs  lib.rs  mac.rs  macros.rs  main.rs  montgomery.rs  mpc.rs  p256.rs  post_quantum.rs  ristretto.rs  scalar.rs  secp256k1.rs  traits.rs  version.rs  wallet.rs  window.rs  zk.rs
src/backend/: fiat_integration.rs  mod.rs  simd_avx2.rs  u32_backend.rs  u64_backend.rs
src/batch/: arithmetic.rs  merkle.rs  mod.rs  signatures.rs  verification.rs
src/guardian/: auth.rs  mod.rs  permissions.rs  tokens.rs
src/hsm/: enclave.rs  pkcs11.rs  tpm.rs  traits.rs
src/mpc/: oblivious_transfer.rs  secret_sharing.rs  secure_aggregation.rs  threshold_ecdsa.rs
src/post_quantum/: dilithium.rs  hybrid.rs  kyber.rs  lattice.rs  ml_kem.rs
src/protocols/: aes_gcm.rs  bls.rs  bulletproofs.rs  commitments.rs  ed25519.rs  gossip.rs  merkle.rs  mod.rs  noise.rs  ring_signatures.rs  schnorr.rs  shamir.rs  threshold.rs  vrf.rs  x25519.rs
src/transport/: gquic.rs  mod.rs  session.rs
src/zk/: circuits.rs  plonk.rs  primitives.rs  setup.rs  snarks.rs  stark.rs
src/zk_hash/: mimc.rs  mod.rs  pedersen.rs  poseidon.rs  rescue.rs
tests/: basic_functionality.rs  integration_tests.rs  proptest_arithmetic.rs  rfc_test_vectors.rs  test_aes_gcm.rs
