[package]
name = "gcrypt"
version = "0.3.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["Christopher Kelley"]
license = "MIT"
description = "A modern, pure Rust cryptographic library focusing on Curve25519 and related algorithms"
repository = "https://github.com/CK-Technology/gcrypt"
categories = ["cryptography", "no-std"]
keywords = ["cryptography", "curve25519", "ed25519", "x25519", "ristretto"]
readme = "README.md"
homepage = "https://github.com/ghostkellz/gcrypt"
documentation = "https://docs.rs/gcrypt"

[features]
default = ["alloc", "std", "rand_core"]
std = ["alloc"]
alloc = []
rand_core = ["dep:rand_core"]
serde = ["dep:serde"]
zeroize = ["dep:zeroize"]
group = ["dep:group", "dep:ff"]
precomputed-tables = []
legacy-compatibility = []
# Cryptographic algorithm features needed by gquic and walletd
ed25519 = []
secp256k1 = ["dep:secp256k1", "dep:bitcoin_hashes"]
secp256r1 = ["dep:p256"]
blake3 = ["dep:blake3"]
bls12_381 = ["dep:bls12_381", "dep:blst", "dep:sha2"]
aes-gcm = ["dep:aes-gcm"]
chacha20-poly1305 = ["dep:chacha20poly1305"]
# Key derivation and wallet features
bip39 = ["dep:bip39"]
bip32 = ["dep:bip32"]
hkdf = ["dep:hkdf"]
# Hash algorithms
sha2 = ["dep:sha2"]
sha3 = ["dep:sha3"]
# MAC algorithms
hmac = ["dep:hmac"]
# KDF algorithms
argon2 = ["dep:argon2"]
# New features for production readiness
simd = []  # Enable SIMD optimizations
fiat-crypto = ["dep:fiat-crypto"]  # Formal verification
security-audit = []  # Enable additional security checks
benchmarks = ["dep:criterion"]  # Enable benchmark suite

[dependencies]
cfg-if = "1.0"
subtle = { version = "2.5", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"], optional = true }
serde = { version = "1.0", default-features = false, optional = true }
zeroize = { version = "1.7", default-features = false, optional = true }
group = { version = "0.13", default-features = false, optional = true }
ff = { version = "0.13", default-features = false, optional = true }
# New dependencies for production features
fiat-crypto = { version = "0.2", default-features = false, optional = true }
criterion = { version = "0.5", features = ["html_reports"], optional = true }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"], optional = true }
secp256k1 = { version = "0.31", default-features = false, features = ["recovery", "rand"], optional = true }
bitcoin_hashes = { version = "0.15", default-features = false, optional = true }
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"], optional = true }
blake3 = { version = "1.5", default-features = false, optional = true }
bls12_381 = { version = "0.8", default-features = false, features = ["alloc", "groups", "pairings", "experimental"], optional = true }
sha2 = { version = "0.10", default-features = false, optional = true }
sha3 = { version = "0.10", default-features = false, optional = true }
blst = { version = "0.3", default-features = false, optional = true }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"], optional = true }
bip39 = { version = "2.0", default-features = false, features = ["alloc"], optional = true }
bip32 = { version = "0.5", default-features = false, features = ["alloc"], optional = true }
hkdf = { version = "0.12", default-features = false, optional = true }
hmac = { version = "0.12", default-features = false, optional = true }
argon2 = { version = "0.5", default-features = false, features = ["alloc"], optional = true }

[dev-dependencies]
rand = "0.8"
hex = "0.4"
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
# Additional test dependencies
proptest = "1.0"  # Property-based testing
wycheproof = "0.5"  # Google's crypto test vectors
