[package]
name = "gcrypt-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
gcrypt = { path = ".." }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "scalar_arithmetic"
path = "fuzz_targets/scalar_arithmetic.rs"

[[bin]]
name = "point_operations"
path = "fuzz_targets/point_operations.rs"

[[bin]]
name = "ed25519_signatures"
path = "fuzz_targets/ed25519_signatures.rs"

[[bin]]
name = "x25519_key_exchange"
path = "fuzz_targets/x25519_key_exchange.rs"